tdf#93583: use getTextWidth to calculate line's width

Since every character in the line might use different styles
Change-Id: I2ce079d4308f4acde42a8366838749a7c20331b4

Change-Id: I01f51f157caa667cebc8860ae37d4458fac2d511
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/155666
Tested-by: Jenkins
Reviewed-by: Xisco Fauli <xiscofauli@libreoffice.org>
Signed-off-by: Xisco Fauli <xiscofauli@libreoffice.org>
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/155724
Reviewed-by: Michael Stahl <michael.stahl@allotropia.de>