svgio/inc/svgtspannode.hxx
@@ -39,9 +39,9 @@ namespace svgio::svgreader
 
             bool                    mbLengthAdjust : 1; // true = spacing, false = spacingAndGlyphs
 
-            // The text line composed by the different SvgCharacterNode children
+            // The text line width composed by the different SvgCharacterNode children
             // it will be used to calculate their alignment
-            OUString maTextLine;
+            double mnTextLineWidth;
 
         public:
             SvgTspanNode(
@@ -83,8 +83,8 @@ namespace svgio::svgreader
             bool getLengthAdjust() const { return mbLengthAdjust; }
             void setLengthAdjust(bool bNew) { mbLengthAdjust = bNew; }
 
-            void concatenateTextLine(std::u16string_view rText) {maTextLine += rText;}
-            const OUString& getTextLine() const { return maTextLine; }
+            void concatenateTextLineWidth(double nWidth) {mnTextLineWidth += nWidth;}
+            double getTextLineWith() const { return mnTextLineWidth; }
         };
 
 } // end of namespace svgio::svgreader
